	 README: final tweaks for 0.5.0 release (libspectrum_0_5_0-branch).
20081130 ChangeLog: add reference to TS2068 timing update
         (libspectrum_0_5_0-branch) (Fred).
20081203 ChangeLog,Makefile.am,README,doc/libspectrum.{3,txt},hacking/ChangeLog,
	 configure.in: merge libspectrum_0_5_0-branch changes onto trunk.
20081214 libspectrum.c: loosen signature checks for .dsk files (Gergely;
	 thanks, zx81 and Simon Owen).
20090128 configure.in: add --without-(bzip2 /zlib) for gentoo and similar
         distros (patch #2533274) (José Manuel Ferrer Ortiz).
20090411 doc/libspectrum.txt,tape.c: add a new tape flag for end of tape
         (part of fixes for bug #2743838) (Fred).
20090411 libspectrum.h.in: export new end of tape flag.
20090509 tape_block.c: handle querying the block length for turbo and pure data
         blocks with 0 length (Fred).
20090608 accessor.pl,doc/libspectrum.txt,libspectrum.c,snap_accessors.txt,
         snapshot.c,szx.c,z80.c: add support for the Fuller Box in snapshots
         (Fred).
20090610 accessor.pl,doc/libspectrum.txt,libspectrum.c,snap_accessors.txt,
         snapshot.c,szx.c,z80.c: add support for the Melodik and similar AY
         interfaces (feature request #1841501) (Fred).
20090611 sna.c: note info loss of Fuller or Melodik info when writing sna
         format snapshots (Fred).
20090627 doc/libspectrum.txt,libspectrum.h.in,make-perl.c,myglib/gslist.c,
         tape.c,tzx_write.c,warajevo_read.c: fix loading Warajevo TAPs of raw
         samples (e.g. BRUCELEE.TAP) (Fred).
20090729 accessor.pl,libspectrum.c,libspectrum.h.in,sna.c,snap_accessors.txt,
         snapshot.c,szx.c,z80.c: add snapshot support for Opus Discovery
         (Fred & Gergely).
20090901 dck.c,rzx.c,snapshot.c,tape.c: give up if file decompression fails
         (Fred).
20090901 rzx.c,snapshot.c,tape.c: remove unused uncompressed variable (Fred).
20090901 plusd.c: remove unused buffer modification in
         libspectrum_plusd_read_header (Fred).